--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,15 @@
 @import './base.css';
+
+body {
+    font-size: 16px;
+    font-family: 'Roboto', cursive;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
