--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,22 +1,22 @@
 @import './base.css';
 
-body {
-  min-height: 100vh;
-  font-size: 16px;
-  font-family: 'Roboto', cursive;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@font-face {
-  font-family: 'Kalam';
-  src: url('@/assets/fonts/Kalam-Regular.ttf') format('truetype');
-  font-weight: 400;
+body {
+  color: var(--color-text);
+  background: var(--color-background);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  line-height: 1.6;
+  font-size: 16px;
+  min-height: 100vh;
 }
